@@ -1,3 +1,13 @@
+2010-01-12  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-perl-encode, tramp-perl-decode):
+	Update copyrights for 2010.
+	(tramp-handle-insert-directory): Simplify handling of SWITCHES.
+	(tramp-wait-for-output): Check, whether PROC is available.
+
+	* tramp-compat.el (tramp-advice-file-expand-wildcards): Wrap call
+	of `featurep' for 2nd argument.
+
 2009-12-26  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-handle-insert-directory): Quote "'" in the
